--- a/Statistical-tests/.project
+++ b/Statistical-tests/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Statistical-tests</name>
+	<name>Statistical-tests2</name>
 	<comment></comment>
 	<projects>
 	</projects>
